Fix MagoMI